    half-installed packages w/o a Description or Maintainer field, as
    this happens normally when the package was never installed before.
  * Improve git format documentation in dpkg-source(1).
    Thanks to Joey Hess, based on a patch by Tanguy Ortolo.
  * Clarify effect of “dpkg --purge” on homedir files in dpkg(1).
    Thanks to The Fungi <fungi@yuggoth.org>. Closes: #593628

  [ Raphaël Hertzog ]
  * Fix dpkg-genchanges to not split the short description in the middle of a
    UTF8 character. Closes: #593442

  [ Updated programs translations ]
  * Italian (Milo Casagrande). Closes: #592953
  * Swedish (Peter Krefting).
  * French (Christian Perrier).

  [ Updated man page translations ]
  * German (Helge Kreutzmann).
  * Swedish (Peter Krefting).
  * French (Christian Perrier).

  [ Updated scripts translations ]
  * German (Helge Kreutzmann). Improved by Holger Wansing.
  * Swedish (Peter Krefting).
  * French (Christian Perrier).

 -- Guillem Jover <guillem@debian.org>  Sat, 21 Aug 2010 08:09:39 +0200

dpkg (1.15.8.4) unstable; urgency=low

  [ Guillem Jover ]
  * Fix use after free segfault on update-alternatives --remove-all.
    Closes: #591653, #591654
  * Always print a massage on warning when parsing control files.
  * On database parsing only warn on bogus versions previously accepted,
    the other instances will keep producing errors, to avoid newly
    introduced bogosity. Closes: #590885, #590896, #591692, #591885
  * Fix compilation on Solaris and Darwin:
    - Link update-alternatives against libintl if libc does not have i18n
      support.
    - Include <limits.h> for _POSIX_MAX_PATH in update-alternatives.
    Thanks to Fabian Groffen <grobian@gentoo.org>.

  [ Raphaël Hertzog ]
  * Fix make -C man install so that it actually finds the manual pages
    to install. Closes: #591588
  * When analyzing the ELF format of a binary in dpkg-shlibdeps, fallback on
    usual objdump when the cross objdump failed. Closes: #591522

  [ Sven Joachim ]