@@ -8,7 +8,7 @@ subdir = scripts/po
 top_builddir = ../..
 
 # These options get passed to xgettext.
-XGETTEXT_OPTIONS = --from-code=iso-8859-1 --keyword=_g
+XGETTEXT_OPTIONS = --from-code=iso-8859-1 --keyword=_g --keyword=P_:1,2
 
 MSGMERGE_OPTIONS = --previous
 
