@@ -8,6 +8,7 @@ dpkg (1.15.8.5) UNRELEASED; urgency=low
     Thanks to Joey Hess, based on a patch by Tanguy Ortolo.
   * Clarify effect of “dpkg --purge” on homedir files in dpkg(1).
     Thanks to The Fungi <fungi@yuggoth.org>. Closes: #593628
+  * Add gettext plurals infrastructure support.
 
   [ Raphaël Hertzog ]
   * Fix dpkg-genchanges to not split the short description in the middle of a
